// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AwsEcrImageModule UT input changes should handle imageFamily change 1`] = `
"+ image/main.tf
data "aws_ecr_authorization_token" "ecr-us-east-1-changed-family_image" {
  registry_id = aws_ecr_repository.ecr-us-east-1-changed-family_image.registry_id
}

- image/main.tf
data "aws_ecr_authorization_token" "ecr-us-east-1-family_image" {
  registry_id = aws_ecr_repository.ecr-us-east-1-family_image.registry_id
}

+ image/main.tf
resource "aws_ecr_repository" "ecr-us-east-1-changed-family_image" {
  provider = aws._123-us-east-1
  force_delete = true
  image_scanning_configuration {
    scan_on_push = false
  }
  image_tag_mutability = "IMMUTABLE"
  name = "changed-family/image"
}

- image/main.tf
resource "aws_ecr_repository" "ecr-us-east-1-family_image" {
  provider = aws._123-us-east-1
  force_delete = true
  image_scanning_configuration {
    scan_on_push = false
  }
  image_tag_mutability = "IMMUTABLE"
  name = "family/image"
}

+ image/outputs.tf
output "ecr-us-east-1-changed-family_image-authorizationToken" {
  value = data.aws_ecr_authorization_token.ecr-us-east-1-changed-family_image.authorization_token
  sensitive = true
}

+ image/outputs.tf
output "ecr-us-east-1-changed-family_image-proxyEndpoint" {
  value = data.aws_ecr_authorization_token.ecr-us-east-1-changed-family_image.proxy_endpoint
}

+ image/outputs.tf
output "ecr-us-east-1-changed-family_image-registryId" {
  value = aws_ecr_repository.ecr-us-east-1-changed-family_image.registry_id
}

+ image/outputs.tf
output "ecr-us-east-1-changed-family_image-repositoryArn" {
  value = aws_ecr_repository.ecr-us-east-1-changed-family_image.arn
}

+ image/outputs.tf
output "ecr-us-east-1-changed-family_image-repositoryName" {
  value = aws_ecr_repository.ecr-us-east-1-changed-family_image.name
}

+ image/outputs.tf
output "ecr-us-east-1-changed-family_image-repositoryUri" {
  value = aws_ecr_repository.ecr-us-east-1-changed-family_image.repository_url
}

- image/outputs.tf
output "ecr-us-east-1-family_image-authorizationToken" {
  value = data.aws_ecr_authorization_token.ecr-us-east-1-family_image.authorization_token
  sensitive = true
}

- image/outputs.tf
output "ecr-us-east-1-family_image-proxyEndpoint" {
  value = data.aws_ecr_authorization_token.ecr-us-east-1-family_image.proxy_endpoint
}

- image/outputs.tf
output "ecr-us-east-1-family_image-registryId" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.registry_id
}

- image/outputs.tf
output "ecr-us-east-1-family_image-repositoryArn" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.arn
}

- image/outputs.tf
output "ecr-us-east-1-family_image-repositoryName" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.name
}

- image/outputs.tf
output "ecr-us-east-1-family_image-repositoryUri" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.repository_url
}"
`;

exports[`AwsEcrImageModule UT input changes should handle imageName change 1`] = `
"+ image/main.tf
data "aws_ecr_authorization_token" "ecr-us-east-1-family_changed-image" {
  registry_id = aws_ecr_repository.ecr-us-east-1-family_changed-image.registry_id
}

- image/main.tf
data "aws_ecr_authorization_token" "ecr-us-east-1-family_image" {
  registry_id = aws_ecr_repository.ecr-us-east-1-family_image.registry_id
}

+ image/main.tf
resource "aws_ecr_repository" "ecr-us-east-1-family_changed-image" {
  provider = aws._123-us-east-1
  force_delete = true
  image_scanning_configuration {
    scan_on_push = false
  }
  image_tag_mutability = "IMMUTABLE"
  name = "family/changed-image"
}

- image/main.tf
resource "aws_ecr_repository" "ecr-us-east-1-family_image" {
  provider = aws._123-us-east-1
  force_delete = true
  image_scanning_configuration {
    scan_on_push = false
  }
  image_tag_mutability = "IMMUTABLE"
  name = "family/image"
}

+ image/outputs.tf
output "ecr-us-east-1-family_changed-image-authorizationToken" {
  value = data.aws_ecr_authorization_token.ecr-us-east-1-family_changed-image.authorization_token
  sensitive = true
}

+ image/outputs.tf
output "ecr-us-east-1-family_changed-image-proxyEndpoint" {
  value = data.aws_ecr_authorization_token.ecr-us-east-1-family_changed-image.proxy_endpoint
}

+ image/outputs.tf
output "ecr-us-east-1-family_changed-image-registryId" {
  value = aws_ecr_repository.ecr-us-east-1-family_changed-image.registry_id
}

+ image/outputs.tf
output "ecr-us-east-1-family_changed-image-repositoryArn" {
  value = aws_ecr_repository.ecr-us-east-1-family_changed-image.arn
}

+ image/outputs.tf
output "ecr-us-east-1-family_changed-image-repositoryName" {
  value = aws_ecr_repository.ecr-us-east-1-family_changed-image.name
}

+ image/outputs.tf
output "ecr-us-east-1-family_changed-image-repositoryUri" {
  value = aws_ecr_repository.ecr-us-east-1-family_changed-image.repository_url
}

- image/outputs.tf
output "ecr-us-east-1-family_image-authorizationToken" {
  value = data.aws_ecr_authorization_token.ecr-us-east-1-family_image.authorization_token
  sensitive = true
}

- image/outputs.tf
output "ecr-us-east-1-family_image-proxyEndpoint" {
  value = data.aws_ecr_authorization_token.ecr-us-east-1-family_image.proxy_endpoint
}

- image/outputs.tf
output "ecr-us-east-1-family_image-registryId" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.registry_id
}

- image/outputs.tf
output "ecr-us-east-1-family_image-repositoryArn" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.arn
}

- image/outputs.tf
output "ecr-us-east-1-family_image-repositoryName" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.name
}

- image/outputs.tf
output "ecr-us-east-1-family_image-repositoryUri" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.repository_url
}"
`;

exports[`AwsEcrImageModule UT should CUD 2`] = `
"- image/main.tf
data "aws_ecr_authorization_token" "ecr-us-east-1-family_image" {
  registry_id = aws_ecr_repository.ecr-us-east-1-family_image.registry_id
}

- image/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

- image/main.tf
resource "aws_ecr_repository" "ecr-us-east-1-family_image" {
  provider = aws._123-us-east-1
  force_delete = true
  image_scanning_configuration {
    scan_on_push = false
  }
  image_tag_mutability = "IMMUTABLE"
  name = "family/image"
}

- image/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- image/outputs.tf
output "ecr-us-east-1-family_image-authorizationToken" {
  value = data.aws_ecr_authorization_token.ecr-us-east-1-family_image.authorization_token
  sensitive = true
}

- image/outputs.tf
output "ecr-us-east-1-family_image-proxyEndpoint" {
  value = data.aws_ecr_authorization_token.ecr-us-east-1-family_image.proxy_endpoint
}

- image/outputs.tf
output "ecr-us-east-1-family_image-registryId" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.registry_id
}

- image/outputs.tf
output "ecr-us-east-1-family_image-repositoryArn" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.arn
}

- image/outputs.tf
output "ecr-us-east-1-family_image-repositoryName" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.name
}

- image/outputs.tf
output "ecr-us-east-1-family_image-repositoryUri" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.repository_url
}

- image/terragrunt.hcl
<empty>

- image/variables.tf
<empty>"
`;

exports[`AwsEcrImageModule UT should CUD tags 2`] = `
"~ image/main.tf resource "aws_ecr_repository" "ecr-us-east-1-family_image" {
@@ -9,3 +9,4 @@
    tags = {
-     tag1 = "value1"
+     tag1 = "value1_1"
+     tag2 = "value2"
    }"
`;

exports[`AwsEcrImageModule UT should CUD tags 4`] = `
"~ image/main.tf resource "aws_ecr_repository" "ecr-us-east-1-family_image" {
@@ -8,6 +8,2 @@
    name = "family/image"
-   tags = {
-     tag1 = "value1_1"
-     tag2 = "value2"
-   }
  }"
`;

exports[`AwsEcrImageModule UT should handle moduleId change 1`] = `
"- image-1/main.tf
data "aws_ecr_authorization_token" "ecr-us-east-1-family_image" {
  registry_id = aws_ecr_repository.ecr-us-east-1-family_image.registry_id
}

- image-1/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

- image-1/main.tf
resource "aws_ecr_repository" "ecr-us-east-1-family_image" {
  provider = aws._123-us-east-1
  force_delete = true
  image_scanning_configuration {
    scan_on_push = false
  }
  image_tag_mutability = "IMMUTABLE"
  name = "family/image"
}

- image-1/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

- image-1/outputs.tf
output "ecr-us-east-1-family_image-authorizationToken" {
  value = data.aws_ecr_authorization_token.ecr-us-east-1-family_image.authorization_token
  sensitive = true
}

- image-1/outputs.tf
output "ecr-us-east-1-family_image-proxyEndpoint" {
  value = data.aws_ecr_authorization_token.ecr-us-east-1-family_image.proxy_endpoint
}

- image-1/outputs.tf
output "ecr-us-east-1-family_image-registryId" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.registry_id
}

- image-1/outputs.tf
output "ecr-us-east-1-family_image-repositoryArn" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.arn
}

- image-1/outputs.tf
output "ecr-us-east-1-family_image-repositoryName" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.name
}

- image-1/outputs.tf
output "ecr-us-east-1-family_image-repositoryUri" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.repository_url
}

- image-1/terragrunt.hcl
<empty>

- image-1/variables.tf
<empty>

+ image-2/main.tf
data "aws_ecr_authorization_token" "ecr-us-east-1-family_image" {
  registry_id = aws_ecr_repository.ecr-us-east-1-family_image.registry_id
}

+ image-2/main.tf
provider "aws" {
  alias = "_123-us-east-1"
  region = "us-east-1"
}

+ image-2/main.tf
resource "aws_ecr_repository" "ecr-us-east-1-family_image" {
  provider = aws._123-us-east-1
  force_delete = true
  image_scanning_configuration {
    scan_on_push = false
  }
  image_tag_mutability = "IMMUTABLE"
  name = "family/image"
}

+ image-2/main.tf
terraform {
  required_version = ">= 1.6.0"
  required_providers {
    aws = {
      source = "hashicorp/aws"
      version = ">= 5.49"
    }
  }
}

+ image-2/outputs.tf
output "ecr-us-east-1-family_image-authorizationToken" {
  value = data.aws_ecr_authorization_token.ecr-us-east-1-family_image.authorization_token
  sensitive = true
}

+ image-2/outputs.tf
output "ecr-us-east-1-family_image-proxyEndpoint" {
  value = data.aws_ecr_authorization_token.ecr-us-east-1-family_image.proxy_endpoint
}

+ image-2/outputs.tf
output "ecr-us-east-1-family_image-registryId" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.registry_id
}

+ image-2/outputs.tf
output "ecr-us-east-1-family_image-repositoryArn" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.arn
}

+ image-2/outputs.tf
output "ecr-us-east-1-family_image-repositoryName" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.name
}

+ image-2/outputs.tf
output "ecr-us-east-1-family_image-repositoryUri" {
  value = aws_ecr_repository.ecr-us-east-1-family_image.repository_url
}

+ image-2/terragrunt.hcl
<empty>

+ image-2/variables.tf
<empty>"
`;
